# chops

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  chopsConfig.cmake.in
include/chops/: archive.hpp  function_traits.hpp  lenses.hpp  maybe.hpp  program_options.hpp  variant.hpp
include/chops/detail/: narg_macro.hpp  stringfy_macro.hpp
include/chops/detail/lenses/: for_each_tuple.hpp  lenses_tuple_helpers.hpp  macro_all.hpp  macro_main.hpp
tests/: CMakeLists.txt  lenses_test.cpp  maybe_test.cpp  program_options_test.cpp  variant_test.cpp
